2005-11-16  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstogmparse.c: (gst_ogm_audio_parse_init):
	Fix compile again.

2005-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/libvisual/visual.c: (gst_visual_init):
	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_init):
	* ext/ogg/gstoggparse.c: (gst_ogg_parse_init),
	(gst_ogg_parse_chain):
	* ext/ogg/gstogmparse.c: (gst_ogm_audio_parse_init),
	(gst_ogm_video_parse_init), (gst_ogm_text_parse_init):
	* ext/theora/theoradec.c: (gst_theora_dec_init):
	* ext/theora/theoraenc.c: (gst_theora_enc_init):
	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_init):
	* ext/vorbis/vorbisparse.c: (gst_vorbis_parse_init):
	* gst/adder/gstadder.c: (gst_adder_class_init),
	(gst_adder_dispose):
	* gst/audiorate/gstaudiorate.c: (gst_audiorate_init):
	* gst/subparse/gstsubparse.c: (gst_subparse_init):
	* gst/videorate/gstvideorate.c: (gst_videorate_init):
	  Fix a whole set of pad template leaks

2005-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* check/generic/states.c: (GST_START_TEST):
	  fix the test so that it only checks for elements that are part of
	  this source module

2005-11-16  Michael Smith <msmith@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_clear), (gst_ogg_mux_reset),
	(gst_ogg_mux_init), (gst_ogg_mux_request_new_pad),
	(gst_ogg_mux_push_buffer), (gst_ogg_mux_dequeue_page),
	(gst_ogg_mux_pad_queue_page), (gst_ogg_mux_queue_pads),
	(gst_ogg_mux_collected), (gst_ogg_mux_clear_collectpads),
	(gst_ogg_mux_change_state):
	  Fix leaking collectpads.

2005-11-16  Edward Hervey  <edward@fluendo.com>

	* gst/videorate/gstvideorate.c: (gst_videorate_blank_data),
	(gst_videorate_event), (gst_videorate_chain):
	Handle segment seeks

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock),
	(gst_base_audio_sink_change_state):
	Set ringbuffer to non-flushing when going to PAUSED, set to
	flushing again when going to READY.
